fixed spacing of guess holes

--- a/css/peg-colors.css
+++ b/css/peg-colors.css
@@ -1,6 +1,6 @@
 .peg{
-  width: 30px;
-  height: 30px;
+  width: 25px;
+  height: 25px;
   margin: 0px;
   padding:0;
   border-radius: 50%;
